Implement Porting Lib events